# nRFLearningRepo

./: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
src/: main.c
src/leds_buttons/: leds_buttons.c  leds_buttons.h
src/leds_pwm/: leds_pwm.c  leds_pwm.h
src/sensors/: bme280.c  bme280.h
